lift compatibility to 1.8 minimum